Address some comments.

--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -19,6 +19,28 @@
   pages={1087--1098}
 }
 
+@article{jarvis1982mantle,
+  title={Mantle convection as a boundary layer phenomenon},
+  author={Jarvis, Gary T and Peltier, WR},
+  journal={Geophysical Journal International},
+  volume={68},
+  number={2},
+  pages={389--427},
+  year={1982},
+  publisher={Oxford University Press}
+}
+
+@article{popov2008slim3d,
+  title={SLIM3D: A tool for three-dimensional thermomechanical modeling of lithospheric deformation with elasto-visco-plastic rheology},
+  author={Popov, AA and Sobolev, SV},
+  journal={Physics of the Earth and Planetary Interiors},
+  volume={171},
+  number={1},
+  pages={55--75},
+  year={2008},
+  publisher={Elsevier}
+}
+
 @article{kronbichler2012high,
   title={High accuracy mantle convection simulation through modern numerical methods},
   author={Kronbichler, Martin and Heister, Timo and Bangerth, Wolfgang},
