Add figure and discussion of power iteration.

--- a/free-surface-paper.bib
+++ b/free-surface-paper.bib
@@ -30,6 +30,14 @@
   publisher={Oxford University Press}
 }
 
+@book{golub2012matrix,
+  title={Matrix computations},
+  author={Golub, Gene H and Van Loan, Charles F},
+  volume={3},
+  year={2012},
+  publisher={JHU Press}
+}
+
 @article{popov2008slim3d,
   title={SLIM3D: A tool for three-dimensional thermomechanical modeling of lithospheric deformation with elasto-visco-plastic rheology},
   author={Popov, AA and Sobolev, SV},
