--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -966,6 +966,16 @@ those due to rotational or tidal deformation.
 \label{fig:tau_sensitivity}
 \end{figure*}
 
+\subsection{Rayleigh-Taylor test}
+\label{sec:rayleigh_taylor}
+
+\begin{figure*}
+\includegraphics[width=0.9\textwidth]{figures/rayleigh_taylor.pdf}
+\caption{Rayleigh-Taylor test. (a) Maximum depth of the drip. The blue line is the result using forward Euler (FE) integration of the free surface with a small 500 yr timestep, and is used as a reference solution. The symbols are for several different runs with different timestepping parameters, using both quasi-implicit (QI) and nonstandard finite difference (NSFD) schemes. As the timestepping gets smaller, both schemes converge to the reference solution (though from different directions). (b) Evolution of the minimum relaxation timescale over the course of the simulation. Every 50 timesteps we calculate the minimum relaxation timescale to observe how much it changes during the simulation. It does experience significant changes, but not by orders of magnitude, so an initial estimate is likely sufficient for this case.}
+\label{fig:rayleigh_taylor}
+\end{figure*}
+
+
 \subsection{Mesh adaptivity}
 \label{sec:mesh_adaptivity}
 
