Add rayleigh_taylor script/figure

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -811,6 +811,8 @@ of experimentation near this value of $\tau$ can find an appropriate relaxation 
 problem can furnish an estimate of its relaxation time.
 \end{itemize} 
 
+\subsection{Connection with Dynamic Relaxation}
+\label{sec:dynamic_relaxation}
 
 \section{Implementation in \texttt{ASPECT} }
 \label{sec:implementation}
