--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -807,7 +807,7 @@ to be calculated or estimated first.  There are several possible ways to determi
 
 \begin{itemize}
 \item Direct solution of Equation~\eqref{eq:generalized_eigenvalue}. This can be expensive, although
-only the minimun relaxation time is required. For certain geometries a simple power iteration on 
+only the minimum relaxation time is required. For certain geometries a simple power iteration on 
 the standard eigenvalue problem (Equation~\eqref{eq:standard_eigenvalue}) could be enough.
 \item Analytical formulae. Several geometry and viscosity model combinations have analytical solutions
 for relaxation spectra. Even if the user's model is not precisely the same (e.g., has some lateral viscosity
