Try on a new title.

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -98,7 +98,7 @@
 %% \address{Address\fnref{label3}}
 %% \fntext[label3]{}
 
-\title{Free surface computations in mantle convection models}
+\title{Stability and accuracy of free surface time integration in buoyancy driven viscous flows}
 
 %% use optional labels to link authors explicitly to addresses:
 %% \author[label1,label2]{}
