Work on rayleigh taylor figures.

--- a/free-surface-paper.tex
+++ b/free-surface-paper.tex
@@ -1020,6 +1020,12 @@ those due to rotational or tidal deformation.
 \label{fig:rayleigh_taylor}
 \end{figure*}
 
+\begin{figure*}
+\includegraphics[width=0.9\textwidth]{figures/rayleigh_taylor_tau_choice.pdf}
+\caption{}
+\label{fig:rayleigh_taylor}
+\end{figure*}
+
 
 \subsection{Mesh adaptivity}
 \label{sec:mesh_adaptivity}
